# DOPE

./: .gitignore  README.md
src/: CMakeLists.txt  main.c
src/CONTRACT/: contract.h  contract_errors.h  demo_contracts.h  posix_errno.h
src/DOPE/: dope_constants.h  dope_io.c  dope_io.h  dope_tape.c  dope_tape.h  dope_types.h
src/FILEUTIL/: file_constants.h  file_io.c  file_io.h  file_types.h  file_utils.c  file_utils.h
src/FUTIL/: file_constants.h  file_types.h
src/LGP30/: lgp30_drum.h
src/PORTABLE/: portable_sleep.h
src/STRUTIL/: str_utils.c  str_utils.h
